src/test/deca/syntax/valid/class/23_test_decl_method_asm.deca
/*
	Description: tests declarations declaration methodes dans une class 
		     avec un asm

	Resultat: syntaxiquement correct

	Date:20/1/2020
	

*/


class b extends c{

	
	float hello() asm ( "powerpuff\"
		\\girl returns
		\\\\hello");
	

		
	


}



