src/test/deca/syntax/invalid/class/param_sans_type.deca
/*
	Description: parametre sans types

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class a extends b{
	

	protected void hello(batman, returns, superman, jealous ){
		print("hello");
	}
}
